--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Analysis\SharpenAnalyzersHolder.cs" />
     <Compile Include="Analysis\MultipleProjectsScopeAnalyzer.cs" />
     <Compile Include="Analysis\SolutionScopeAnalyzer.cs" />
+    <Compile Include="CSharpFeatures\AsyncStreams.cs" />
     <Compile Include="CSharpFeatures\NullableReferenceTypes.cs" />
     <Compile Include="CSharpFeatures\AsyncAwait.cs" />
     <Compile Include="CSharpFeatures\ImplicitlyTypedLocalVariables.cs" />
@@ -277,6 +278,8 @@
     <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInProperties.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForDestructors.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForConstructors.cs" />
+    <Compile Include="SharpenSuggestions\CSharp80\AsyncStreams\Analyzers\ConsiderAwaitingEquivalentAsynchronousMethodAndYieldingIAsyncEnumerableAnalyzer.cs" />
+    <Compile Include="SharpenSuggestions\CSharp80\AsyncStreams\Suggestions\ConsiderAwaitingEquivalentAsynchronousMethodAndYieldingIAsyncEnumerable.cs" />
     <Compile Include="SharpenSuggestions\CSharp80\NullableReferenceTypes\Analyzers\EnableNullableContextAndDeclareReferenceIdentifierAsNullableAnalyzer.cs" />
     <Compile Include="SharpenSuggestions\CSharp80\NullableReferenceTypes\Suggestions\EnableNullableContextAndDeclareReferenceParameterAsNullable.cs" />
     <Compile Include="SharpenSuggestions\CSharp80\NullableReferenceTypes\Suggestions\EnableNullableContextAndDeclareReferenceVariableAsNullable.cs" />
