feat: Adds simply-implemented suggestions for C# 8.0 using declarations
Just a draft with lot of open TODOs, but already more than useful.
Done quickly in order to have an awesome demo at the Weblica
conference :-)

--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -287,6 +287,7 @@
     <Compile Include="SharpenSuggestions\CSharp80\NullableReferenceTypes\Suggestions\EnableNullableContextAndDeclareReferencePropertyAsNullable.cs" />
     <Compile Include="SharpenSuggestions\CSharp80\NullableReferenceTypes\Suggestions\EnableNullableContextAndDeclareReferenceFieldAsNullable.cs" />
     <Compile Include="SharpenSuggestions\CSharp80\UsingDeclarations\Analyzers\ReplaceUsingStatementWithUsingDeclarationAnalyzer.cs" />
+    <Compile Include="SharpenSuggestions\CSharp80\UsingDeclarations\Suggestions\ConsiderReplacingUsingStatementWithUsingDeclaration.cs" />
     <Compile Include="SharpenSuggestions\CSharp80\UsingDeclarations\Suggestions\ReplaceUsingStatementWithUsingDeclaration.cs" />
   </ItemGroup>
   <ItemGroup>
