feat: Explicitly supports local functions in async-await suggestions

--- a/tests/smoke/CSharp50/CSharp50.csproj
+++ b/tests/smoke/CSharp50/CSharp50.csproj
@@ -60,7 +60,10 @@
     <Compile Include="AsyncAwait\AwaitTaskInsteadOfCallingTaskWait\TaskCannotBeAwaitedInsteadOfCallingTaskWait.cs" />
     <Compile Include="AsyncAwait\AwaitTaskInsteadOfCallingTaskWait\TaskCanBeAwaitedInsteadOfCallingTaskWait.cs" />
     <Compile Include="AsyncAwait\ConsiderAwaitingEquivalentAsynchronousMethod\MethodsThatDoNotHaveEquivalentAsynchronousMethod.cs" />
+    <Compile Include="AsyncAwait\ConsiderAwaitingEquivalentAsynchronousMethod\MethodsThatHaveEquivalentAsynchronousMethodButCalledInConstructor.cs" />
+    <Compile Include="AsyncAwait\ConsiderAwaitingEquivalentAsynchronousMethod\MethodsThatHaveEquivalentAsynchronousMethodButCalledInProperties.cs" />
     <Compile Include="AsyncAwait\ConsiderAwaitingEquivalentAsynchronousMethod\MethodsThatHaveEquivalentAsynchronousMethod.cs" />
+    <Compile Include="AsyncAwait\ConsiderAwaitingEquivalentAsynchronousMethod\MethodsThatHaveEquivalentAsynchronousMethodButYieldEnumerable.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
