--- a/src/Sharpen.VisualStudioExtension/packages.config
+++ b/src/Sharpen.VisualStudioExtension/packages.config
@@ -1,83 +1,85 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net46" />
-  <package id="ManagedEsent" version="1.9.4" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis" version="2.4.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.4.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.4.0" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.ComponentModelHost" version="15.4.27004" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Imaging" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.26930" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.LanguageServices" version="2.4.0" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.7.7" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.16" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.15.0" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6072" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30320" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61031" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30111" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" version="14.3.26929" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.15.3.DesignTime" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50728" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6071" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50728" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Threading" version="15.3.23" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.7.18" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Utilities" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net46" />
-  <package id="Microsoft.VSSDK.BuildTools" version="15.1.192" targetFramework="net46" developmentDependency="true" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net46" />
-  <package id="System.Composition" version="1.0.31" targetFramework="net46" />
-  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net46" />
-  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net46" />
-  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net46" />
-  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net46" />
-  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net46" />
-  <package id="System.Console" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net46" />
-  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
-  <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net46" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net46" />
-  <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net46" />
-  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net46" />
-  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net46" />
-  <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net46" />
-  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading.Thread" version="4.3.0" targetFramework="net46" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net46" />
+  <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net461" />
+  <package id="ManagedEsent" version="1.9.4" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.ComponentModelHost" version="15.4.27004" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26606" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Imaging" version="15.0.26606" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.26930" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.LanguageServices" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.7.7" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.16" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.15.0" version="15.0.26606" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26606" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6072" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30320" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61031" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30111" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" version="14.3.26929" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.15.3.DesignTime" version="15.0.26606" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50728" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6071" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50728" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.3.23" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.7.18" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Utilities" version="15.0.26606" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net461" />
+  <package id="Microsoft.VSSDK.BuildTools" version="15.1.192" targetFramework="net461" developmentDependency="true" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net461" />
+  <package id="System.Composition" version="1.0.31" targetFramework="net461" />
+  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net461" />
+  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net461" />
+  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net461" />
+  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net461" />
+  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net461" />
+  <package id="System.Console" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
 </packages>
