tests: Adds CSharp80.NullableReferenceTypes smoke tests helper project

--- a/tests/smoke/CSharp80/CSharp80.csproj
+++ b/tests/smoke/CSharp80/CSharp80.csproj
@@ -5,4 +5,8 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CSharp80.NullableReferenceTypes\CSharp80.NullableReferenceTypes.csproj" />
+  </ItemGroup>
+
 </Project>
