--- a/lab/AboutDialog/AboutDialog/App.config
+++ b/lab/AboutDialog/AboutDialog/App.config
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+      <section name="aboutDialog" type="Sharpen.AboutDialog+ConfigSection, AboutDialog" />
+  </configSections>
+  <aboutDialog
+    gitHubAuthToken="7d42df1dd95aa9368b75fcb7883b11f428d27ca3"
+    gitHubLogin="sharpenrocks"
+    gitHubRepository="Sharpen"
+    vSMarketplaceID="ironcev.Sharpen" />
   <appSettings>
-    <add key="GitHubAuthToken" value="7d42df1dd95aa9368b75fcb7883b11f428d27ca3"/>
-    <add key="GitHubLogin" value="sharpenrocks"/>
-    <add key="GitHubRepository" value="Sharpen"/>
-    <add key="VSMarketplaceID" value="ironcev.Sharpen"/>
+    <add key="GitHubAuthToken" value="7d42df1dd95aa9368b75fcb7883b11f428d27ca3" />
+    <add key="GitHubLogin" value="sharpenrocks" />
+    <add key="GitHubRepository" value="Sharpen" />
+    <add key="VSMarketplaceID" value="ironcev.Sharpen" />
   </appSettings>
 </configuration>
