--- a/lab/AboutDialog/AboutDialog/App.config
+++ b/lab/AboutDialog/AboutDialog/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-      <section name="aboutDialog" type="Sharpen.AboutDialog+ConfigSection, AboutDialog" />
+      <section name="aboutDialogConfigurationSection" type="Sharpen.AboutDialogConfigurationSection, AboutDialog" />
   </configSections>
-  <aboutDialog
+  <aboutDialogConfigurationSection
     gitHubAuthToken="7d42df1dd95aa9368b75fcb7883b11f428d27ca3"
     gitHubLogin="sharpenrocks"
     gitHubRepository="Sharpen"
-    vSMarketplaceID="ironcev.Sharpen" />
+    vSMarketplaceId="ironcev.Sharpen" />
 </configuration>
